--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=TUF15;Initial Catalog=Localbrand;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
+  "JwtSettings": {
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience",
+    "SecretKey": "your-long-secret-key-that-is-at-least-32-characters-long"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
