--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=TUF15;Initial Catalog=Localbrand;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=local-brand;Username=postgres;Password=2518700146"
   },
   "JwtSettings": {
     "Issuer": "YourIssuer",
