--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,6 +7,16 @@
     "Audience": "YourAudience",
     "SecretKey": "your-long-secret-key-that-is-at-least-32-characters-long"
   },
+
+  "SmtpSettings": {
+    "Server": "smtp.gmail.com",
+    "Port": 587,
+    "SenderName": "Z Bussiness",
+    "SenderEmail": "nguyenvo1373.hg@gmail.com",
+    "Username": "nguyenvo1373.hg@gmail.com",
+    "Password": "pyra elcp mwkq mraw"
+  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
