--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -17,6 +17,12 @@
     "Password": "pyra elcp mwkq mraw"
   },
   
+  "Cloudinary": {
+    "CloudName": "dmmdx9nao",
+    "ApiKey": "554773135881795",
+    "ApiSecret": "Em28wfVOOtb060mb0rzq4mxDtW4"
+  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
