--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
     "vee-validate": "^4.13.2",
     "vue": "^3.4.29",
     "vue-router": "^4.4.3",
