--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "isotope-layout": "^3.0.6",
     "vee-validate": "^4.13.2",
     "vue": "^3.4.29",
+    "vue-loading-overlay": "6.0",
     "vue-router": "^4.4.3",
     "vuex": "^4.1.0",
     "yup": "^1.4.0"
