BE: Pay by momo

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -22,6 +22,15 @@
     "ApiKey": "554773135881795",
     "ApiSecret": "Em28wfVOOtb060mb0rzq4mxDtW4"
   },
+  "MoMoSetting": {
+    "PartnerCode": "MOMO",
+    "AccessKey": "F8BBA842ECF85",
+    "SecretKey": "K951B6PE1waDMi640xX08PD3vg6EkVlz",
+    "Endpoint": "https://test-payment.momo.vn/gw_payment/transactionProcessor",
+    "ReturnUrl": "http://localhost:3001/payment-result",
+    "NotifyUrl": "http://localhost:3001/payment-fail",
+    "RequestType": "captureMoMoWallet"
+  },
   
   "Logging": {
     "LogLevel": {
