BE: update Payment

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -31,6 +31,20 @@
     "NotifyUrl": "http://localhost:3001/payment-fail",
     "RequestType": "captureMoMoWallet"
   },
+
+  "Vnpay": {
+    "TmnCode": "FB6MWU76",
+    "HashSecret": "GNQAC56K42N8FGPAPJTCNNCLYAMEZ8SG",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "Command": "pay",
+    "CurrCode": "VND",
+    "Version": "2.1.0",
+    "Locale": "vn"
+  },
+  "PaymentCallBack": {
+    "ReturnUrl": "http://localhost:3001/payment-result"
+  },
+  "TimeZoneId": "SE Asia Standard Time",
   
   "Logging": {
     "LogLevel": {
