--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.6",
     "date-fns": "^3.6.0",
     "isotope-layout": "^3.0.6",
     "vee-validate": "^4.13.2",
