BE: update order, special

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -11,7 +11,7 @@
   "SmtpSettings": {
     "Server": "smtp.gmail.com",
     "Port": 587,
-    "SenderName": "Z Bussiness",
+    "SenderName": "AIMIRI - FASHION",
     "SenderEmail": "nguyenvo1373.hg@gmail.com",
     "Username": "nguyenvo1373.hg@gmail.com",
     "Password": "pyra elcp mwkq mraw"
